# MKconfigCMake

./: CMakeLists.txt  arm-none-eabi-gcc.cmake  build.sh
core/inc/: main.h
core/src/: main.c
driver/CMSIS/inc/: stm32f2xx.h
